Fixed demo 4